internal-services/config/networkpolicy/production/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-external-cluster
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
  policyTypes:
  - Egress
  egress:
    - to:
      - namespaceSelector: {}
        podSelector:
          matchLabels:
            apiserver: "true"
            app: openshift-kube-apiserver
      ports:
        - port: 6443
        - port: 80
        - port: 443
          protocol: TCP
    - to:
      - ipBlock:
          cidr: 44.195.126.208/32  # Hypershift-Dev
      ports:
        - port: 6443
        - port: 80
        - port: 443
          protocol: TCP
    - to:
      - ipBlock:
          cidr: 54.91.12.133/32  # RHTAP-Prod
      ports:
        - port: 6443
        - port: 80
        - port: 443
          protocol: TCP
